[project]
name = "lpdfio-lpdf"
version = "0.0.0"
description = "Python adapter for Lpdf — PDF as Code, on every platform. Describe your document structure in code using the programming Kit, or XML. Every PDF is compact, pixel-perfect, and identical across platforms."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "lpdf.io", email = "support@lpdf.io"}]
keywords = ["pdf", "wasm", "xml", "document"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://lpdf.io"
Repository = "https://github.com/lpdfio/lpdf-python"
Changelog = "https://github.com/lpdfio/lpdf/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["lpdf/**", "resources/**"]
